# online-shoppers-tools

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  conda-lock.yml  environment.yml  pyproject.toml
.github/workflows/: tests.yml
src/online-shoppers-tools/: __init__.py  calculate_class_balance.py  create_feat_importance_plot.py
src/online_shopper_utils.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/online_shoppers_tools/: convert_boolean_values.py  evaluate_model.py
tests/: test_calculate_class_balance.py  test_convert_boolean_values.py  test_create_feat_importance_plot.py  test_evaluate_model.py
