[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "online-shopper-utils"
version = "0.1.0"
description = "Reusable utility functions for preprocessing, class balance analysis, model evaluation, and feature-importance visualization."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Unlicense" }

authors = [
  { name = "Dominique Chen" },
  { name = "Paridhi Bansal" },
  { name = "Nizel Abalos" },
  { name = "Ja Kaewwetchawong"}
]

dependencies = [
  "pandas",
  "matplotlib",
  "scikit-learn"
]

[tool.hatch.build.targets.wheel]
packages = ["src/online_shoppers_tools"]

[tool.hatch.envs.default]
python = "3.10"

[tool.hatch.envs.test]
python = "3.10"
dependencies = [
  "pytest"
]

[tool.hatch.envs.test.scripts]
run = "pytest"